# gestureai

./: .env.example  .gitignore  LICENSE  docker-compose.yml  load_env.bash  nginx.conf  update.sh
.github/workflows/: docker-deploy.yml
backend/: Dockerfile  pyproject.toml  start.sh
backend/app/: init_db.py  main.py
backend/app/controllers/api/: prediction_controller.py
backend/app/controllers/view/: view_controller.py
backend/app/core/: db_context.py  dependencies.py  jinja_context.py  jwt_context.py  lifespan.py  view_handlers.py
backend/app/factories/: prediciton_factory.py  telemetry_factory.py
backend/app/mappers/: telemetry_mapper.py
backend/app/models/: db.py  dto.py
backend/app/repos/: telemetry_repo.py
backend/app/services/: auth_service.py  fake_service.py  image_service.py  model_service.py  page_service.py  preparing_service.py  telemetry_service.py
backend/app/src/: lasts_responses.jinja  live.jinja  login.jinja  panel.jinja  test.jinja
backend/app/utils/: config.py  helpers.py
frontend/: Dockerfile  start.sh
frontend/app/: .env.example  dump.rdb  package-lock.json  package.json
frontend/app/src/: app.css
frontend/app/src/lib/: stores.ts  types.ts
frontend/app/src/lib/components/: app-sidebar.svelte  gesture-ai-dialog.svelte  nav-main.svelte  nav-projects.svelte  nav-user.svelte  navbar.svelte  username-dialog.svelte
frontend/app/src/lib/hooks/: use-auto-scroll.svelte.ts
frontend/app/src/lib/server/: redis-chat.ts  redis-service.ts  redis.ts  uploadthing.ts
frontend/app/src/routes/: +layout.svelte  +page.svelte
(+4 files in other folders)
