[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "jinja2>=3.1.6",
    "keras>=3.10.0",
    "psycopg2-binary>=2.9.10",
    "pyjwt>=2.10.1",
    "python-magic>=0.4.27",
    "sqlalchemy>=2.0.41",
    "tensorflow-cpu>=2.18.0",
]
